fixed name alignment

--- a/page.css
+++ b/page.css
@@ -189,7 +189,7 @@ body {
 
 #profiles ul {
   position: relative;
-  left: 700px;
+  left: 600px;
   list-style: none;  
 }
 
